--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "build": "ng build --prod --output-hashing=none",
+"package": "cat ./dist/ng-elements-test/{runtime,polyfills,scripts,main}.js > my-counter.js"
+
   },
   "private": true,
   "dependencies": {
